differenceChecking/production/virtualServices/vs_coreapibatch.yaml

#####################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapibatch
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-batch/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapibatch-crm
  - match:
    - uri:
        prefix: /core-api-batch/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapibatch-teller
  - match:
    - uri:
        prefix: /core-api-batch
    route:
    - destination:
        port:
          number: 80
        host: coreapibatch
