differenceChecking/production/virtualServices/vs_coreapicard.yaml

###########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapicard
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-card/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapicard-crm
  - match:
    - uri:
        prefix: /core-api-card/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapicard-teller

  - match:
    - uri:
        prefix: /core-api-card
    route:
    - destination:
        port:
          number: 80
        host: coreapicard
