differenceChecking/production/virtualServices/vs_coreapicharges.yaml
#####################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: coreapicharges
 namespace: teresol
spec:
 hosts:
 - "*"
 gateways:
 - istio-gateway
 http:
 - match:
   - uri:
       prefix: /core-api-charges/v3
   route:
   - destination:
       port:
         number: 80
       host: coreapicharges-crm
 - match:
   - uri:
       prefix: /core-api-charges/v2
   route:
   - destination:
       port:
         number: 80
       host: coreapicharges-teller
