differenceChecking/production/virtualServices/vs_coreapicustomer.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapicustomer
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-customer/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapicustomer-crm
  - match:
    - uri:
        prefix: /core-api-customer/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapicustomer-teller

  - match:
    - uri:
        prefix: /core-api-customer
    route:
    - destination:
        port:
          number: 80
        host: coreapicustomer
