differenceChecking/production/virtualServices/vs_coreapiprocessaccount.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiprocessaccount
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-process-account/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiprocessaccount-crm
