differenceChecking/production/virtualServices/vs_coreapiproduct.yaml
#########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapiproduct
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-product/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapiproduct-crm
  - match:
    - uri:
        prefix: /core-api-product/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapiproduct-teller
  - match:
    - uri:
        prefix: /core-api-product
    route:
    - destination:
        port:
          number: 80
        host: coreapiproduct
