differenceChecking/production/virtualServices/vs_coreapisetup.yaml

##############################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapisetup
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-setup/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapisetup-crm
