differenceChecking/production/virtualServices/vs_coreapitdr.yaml
##########################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapitdr
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-tdr/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapitdr-crm
