differenceChecking/production/virtualServices/vs_coreapitieup_esm.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coreapitieup
  namespace: teresol
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /core-api-tieup/v3
    route:
    - destination:
        port:
          number: 80
        host: coreapitieup.esm.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-tieup/v2
    route:
    - destination:
        port:
          number: 80
        host: coreapitieup.esm.svc.cluster.local
  - match:
    - uri:
        prefix: /core-api-tieup
    route:
    - destination:
        port:
          number: 80
        host: coreapitieup.esm.svc.cluster.local
